// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/NavScroll Menu Inline 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="inline-menu"
    >
      <div
        className="link-list-wrapper"
      >
        <ul
          className="link-list"
        >
          <li>
            <a
              aria-controls="#collapseOne"
              aria-expanded="false"
              className="large medium right-icon collapsed list-item"
              href="#collapseOne"
            >
              <span>
                Link list 1
              </span>
              <svg
                className="icon icon-primary icon-sm sm"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
              >
                <use
                  xlinkHref="sprite.svg#it-expand"
                />
              </svg>
              <ul
                className="collapse  link-sublist"
                id="collapseOne"
              >
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 1
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 2
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 3
                    </span>
                  </a>
                </li>
              </ul>
            </a>
          </li>
          <li>
            <a
              aria-controls="#collapseTwo"
              aria-expanded="false"
              className="large medium right-icon collapsed list-item"
              href="#collapseTwo"
            >
              <span>
                Link list 1
              </span>
              <svg
                className="icon icon-primary icon-sm sm"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
              >
                <use
                  xlinkHref="sprite.svg#it-expand"
                />
              </svg>
              <ul
                className="collapse  link-sublist"
                id="collapseTwo"
              >
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 1
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 2
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 3
                    </span>
                  </a>
                </li>
              </ul>
            </a>
          </li>
          <li>
            <a
              aria-controls="#collapseThree"
              aria-expanded="false"
              className="large medium right-icon collapsed list-item"
              href="#collapseThree"
            >
              <span>
                Link list 1
              </span>
              <svg
                className="icon icon-primary icon-sm sm"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
              >
                <use
                  xlinkHref="sprite.svg#it-expand"
                />
              </svg>
              <ul
                className="collapse  link-sublist"
                id="collapseThree"
              >
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 1
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 2
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="list-item"
                  >
                    <span>
                      Link list 3
                    </span>
                  </a>
                </li>
              </ul>
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/NavScroll Posizionamento a fondo pagina con linea a sinistra 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="it-navscroll-wrapper navbar-expand-lg it-bottom-navscroll it-left-side navbar navbar-expand-lg"
    >
      <button
        aria-controls="navbarNavB"
        aria-expanded="false"
        aria-label="Toggle navigation"
        className="custom-navbar-toggler"
        type="button"
      >
        <span
          className="it-list"
        />
        1. Introduzione
      </button>
      <div
        aria-expanded="false"
        className="collapse navbar-collapsable"
        id="navbarNavB"
        style={Object {}}
      >
        <div
          className="overlay"
          style={Object {}}
        />
        <div
          className="close-div sr-only"
        >
          <button
            aria-label={null}
            className="close-menu btn btn-secondary"
            onClick={[Function]}
            type="button"
          >
            <span
              className="it-close"
            />
            Chiudi
          </button>
        </div>
        <a
          className="it-back-button"
          href="#"
          style={Object {}}
        >
          <svg
            className="icon align-top icon-primary icon-sm sm"
          >
            <use
              xlinkHref="sprite.svg#it-chevron-left"
            />
          </svg>
          <span>
            Torna indietro
          </span>
        </a>
        <div
          className="menu-wrapper"
        >
          <div
            className="link-list-wrapper"
          >
            <h3
              className="no_toc"
            >
              Indice della pagina
            </h3>
            <ul
              className="link-list"
              style={Object {}}
            >
              <li
                className="nav-item active"
              >
                <a
                  className="nav-link active"
                  href="#introduzione-1"
                  onClick={[Function]}
                >
                  <span>
                    1. Introduzione 
                  </span>
                </a>
                <ul
                  className="link-list"
                >
                  <li
                    className="nav-link active"
                    onClick={[Function]}
                  >
                    <a
                      className="nav-link active"
                      href="#introduzione-1-1"
                      onClick={[Function]}
                    >
                      <span>
                        1.1 Nested Item (active) 
                      </span>
                    </a>
                    <ul
                      className="tertiary link-list"
                    >
                      <li
                        className="nav-link"
                        onClick={[Function]}
                      >
                        <a
                          className="nav-link"
                          href="#introduzione-1-1-1"
                          onClick={[Function]}
                        >
                          <span>
                            1.1.1 Nested Item 
                          </span>
                        </a>
                      </li>
                      <li
                        className="nav-link"
                        onClick={[Function]}
                      >
                        <a
                          className="nav-link"
                          href="#introduzione-1-1-2"
                          onClick={[Function]}
                        >
                          <span>
                            1.1.2 Nested Item 
                          </span>
                        </a>
                      </li>
                      <li
                        className="nav-link"
                        onClick={[Function]}
                      >
                        <a
                          className="nav-link"
                          href="#introduzione-1-1-3"
                          onClick={[Function]}
                        >
                          <span>
                            1.1.3 Nested Item 
                          </span>
                        </a>
                      </li>
                    </ul>
                  </li>
                  <li
                    className="nav-link"
                    onClick={[Function]}
                  >
                    <a
                      className="nav-link"
                      href="#introduzione-1-2"
                      onClick={[Function]}
                    >
                      <span>
                        1.2 Nested Item
                      </span>
                    </a>
                  </li>
                  <li
                    className="nav-link"
                    onClick={[Function]}
                  >
                    <a
                      className="nav-link"
                      href="#introduzione-1-3"
                      onClick={[Function]}
                    >
                      <span>
                        1.3 Nested Item
                      </span>
                    </a>
                  </li>
                </ul>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link"
                  href="#list-item-2"
                  onClick={[Function]}
                >
                  <span>
                    2. List item 
                  </span>
                </a>
                <ul
                  className="link-list"
                >
                  <li
                    className="nav-link active"
                    onClick={[Function]}
                  >
                    <a
                      className="nav-link"
                      href="#list-item-2-1"
                      onClick={[Function]}
                    >
                      <span>
                        2.1 Nested Item
                      </span>
                    </a>
                    <ul
                      className="tertiary link-list"
                    >
                      <li
                        className="nav-link"
                        onClick={[Function]}
                      >
                        <a
                          className="nav-link"
                          href="#list-item-2-1-1"
                          onClick={[Function]}
                        >
                          <span>
                            2.1.1 Nested Item 
                          </span>
                        </a>
                      </li>
                      <li
                        className="nav-link"
                        onClick={[Function]}
                      >
                        <a
                          className="nav-link"
                          href="#list-item-2-1-2"
                          onClick={[Function]}
                        >
                          <span>
                            2.1.2 Nested Item 
                          </span>
                        </a>
                      </li>
                      <li
                        className="nav-link"
                        onClick={[Function]}
                      >
                        <a
                          className="nav-link"
                          href="#list-item-2-1-3"
                          onClick={[Function]}
                        >
                          <span>
                            2.1.3 Nested Item 
                          </span>
                        </a>
                      </li>
                    </ul>
                  </li>
                  <li
                    className="nav-link"
                    onClick={[Function]}
                  >
                    <a
                      className="nav-link"
                      href="#list-item-2-2"
                      onClick={[Function]}
                    >
                      <span>
                        2.2 Nested Item
                      </span>
                    </a>
                  </li>
                  <li
                    className="nav-link"
                    onClick={[Function]}
                  >
                    <a
                      className="nav-link"
                      href="#list-item-2-3"
                      onClick={[Function]}
                    >
                      <span>
                        2.3 Nested Item
                      </span>
                    </a>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/NavScroll Posizionamento in testa alla pagina con linea a destra 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sticky-wrapper navbar-wrapper"
    >
      <nav
        className="it-navscroll-wrapper navbar-expand-lg it-top-navscroll it-right-side navbar navbar-expand-lg"
      >
        <button
          aria-controls="navbarNavB"
          aria-expanded="false"
          aria-label="Toggle navigation"
          className="custom-navbar-toggler"
          type="button"
        >
          <span
            className="it-list"
          />
          1. Introduzione
        </button>
        <div
          aria-expanded="false"
          className="collapse navbar-collapsable"
          id="navbarNavB"
          style={Object {}}
        >
          <div
            className="overlay"
            style={Object {}}
          />
          <div
            className="close-div sr-only"
          >
            <button
              aria-label={null}
              className="close-menu btn btn-secondary"
              onClick={[Function]}
              type="button"
            >
              <span
                className="it-close"
              />
              Chiudi
            </button>
          </div>
          <a
            className="it-back-button"
            href="#"
            style={Object {}}
          >
            <svg
              className="icon align-top icon-primary icon-sm sm"
            >
              <use
                xlinkHref="sprite.svg#it-chevron-left"
              />
            </svg>
            <span>
              Torna indietro
            </span>
          </a>
          <div
            className="menu-wrapper"
          >
            <div
              className="link-list-wrapper"
            >
              <h3
                className="no_toc"
              >
                Indice della pagina
              </h3>
              <ul
                className="link-list"
                style={Object {}}
              >
                <li
                  className="nav-item active"
                >
                  <a
                    className="nav-link active"
                    href="#introduzione-1"
                    onClick={[Function]}
                  >
                    <span>
                      1. Introduzione 
                    </span>
                  </a>
                  <div
                    className="link-list-wrapper"
                  >
                    <ul
                      className="link-list"
                    >
                      <li
                        className="nav-link active"
                        onClick={[Function]}
                      >
                        <a
                          className="nav-link active"
                          href="#introduzione-1-1"
                          onClick={[Function]}
                        >
                          <span>
                            1.1 Nested Item (active) 
                          </span>
                        </a>
                        <div
                          className="link-list-wrapper"
                        >
                          <ul
                            className="tertiary link-list"
                          >
                            <li
                              className="nav-link"
                              onClick={[Function]}
                            >
                              <a
                                className="nav-link"
                                href="#introduzione-1-1-1"
                                onClick={[Function]}
                              >
                                <span>
                                  1.1.1 Nested Item 
                                </span>
                              </a>
                            </li>
                            <li
                              className="nav-link"
                              onClick={[Function]}
                            >
                              <a
                                className="nav-link"
                                href="#introduzione-1-1-2"
                                onClick={[Function]}
                              >
                                <span>
                                  1.1.2 Nested Item 
                                </span>
                              </a>
                            </li>
                            <li
                              className="nav-link"
                              onClick={[Function]}
                            >
                              <a
                                className="nav-link"
                                href="#introduzione-1-1-3"
                                onClick={[Function]}
                              >
                                <span>
                                  1.1.3 Nested Item 
                                </span>
                              </a>
                            </li>
                            <a
                              className="nav-link"
                              href="#introduzione-1-2"
                              onClick={[Function]}
                            >
                              <span>
                                1.2 Nested Item
                              </span>
                            </a>
                            <a
                              className="nav-link"
                              href="#introduzione-1-3"
                              onClick={[Function]}
                            >
                              <span>
                                1.3 Nested Item
                              </span>
                            </a>
                          </ul>
                        </div>
                      </li>
                    </ul>
                  </div>
                </li>
                <li
                  className="nav-item"
                >
                  <a
                    className="nav-link"
                    href="#list-item-2"
                    onClick={[Function]}
                  >
                    <span>
                      2. List item 
                    </span>
                  </a>
                  <div
                    className="link-list-wrapper"
                  >
                    <ul
                      className="link-list"
                    >
                      <li
                        className="nav-link active"
                        onClick={[Function]}
                      >
                        <a
                          className="nav-link"
                          href="#list-item-2-1"
                          onClick={[Function]}
                        >
                          <span>
                            2.1 Nested Item
                          </span>
                        </a>
                        <div
                          className="link-list-wrapper"
                        >
                          <ul
                            className="tertiary link-list"
                          >
                            <li
                              className="nav-link"
                              onClick={[Function]}
                            >
                              <a
                                className="nav-link"
                                href="#list-item-2-1-1"
                                onClick={[Function]}
                              >
                                <span>
                                  2.1.1 Nested Item 
                                </span>
                              </a>
                            </li>
                            <li
                              className="nav-link"
                              onClick={[Function]}
                            >
                              <a
                                className="nav-link"
                                href="#list-item-2-1-2"
                                onClick={[Function]}
                              >
                                <span>
                                  2.1.2 Nested Item 
                                </span>
                              </a>
                            </li>
                            <li
                              className="nav-link"
                              onClick={[Function]}
                            >
                              <a
                                className="nav-link"
                                href="#list-item-2-1-3"
                                onClick={[Function]}
                              >
                                <span>
                                  2.1.3 Nested Item 
                                </span>
                              </a>
                            </li>
                            <a
                              className="nav-link"
                              href="#list-item-2-2"
                              onClick={[Function]}
                            >
                              <span>
                                2.2 Nested Item
                              </span>
                            </a>
                            <a
                              className="nav-link"
                              href="#list-item-2-3"
                              onClick={[Function]}
                            >
                              <span>
                                2.3 Nested Item
                              </span>
                            </a>
                          </ul>
                        </div>
                      </li>
                    </ul>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </nav>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
